# t3

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
docker/: Dockerfile
src/: exception_intf.hpp  main.cpp  t3.hpp
src/bot/: basic_moves_impl.cpp  basic_moves_impl.hpp  board_util_impl.cpp  board_util_impl.hpp  exception.hpp  naive_bot.cpp  naive_bot.hpp  perfect_bot.cpp  perfect_bot.hpp
src/engine/: engine.cpp  engine.hpp  exception.hpp  move_coordinates_provider_intf.hpp  player_controllers.cpp  player_controllers.hpp  setup_players.cpp  setup_players.hpp
src/model/: board.cpp  board.hpp  coordinates.hpp  exception.hpp  game.cpp  game.hpp  line.cpp  line.hpp  player.cpp  player.hpp  scoring_util.cpp  scoring_util.hpp  symbol.hpp
src/ui/: bot_type.hpp  cli.cpp  cli.hpp  exception.hpp  player_type.hpp  ui_intf.hpp
test/: mock_coordinates_provider.hpp  mock_ui.hpp  util.hpp
test/bot/: main.cpp  test-naive_never_throw.cpp  test-perfect_never_lose.cpp  util.hpp
test/cli/: main.cpp  test-cli.cpp
test/engine/: main.cpp  test-engine.cpp  test-player_controllers.cpp  test-setup_players.cpp
test/model/: main.cpp  test-board.cpp  test-coordinates.cpp  test-game.cpp  test-line.cpp  test-player.cpp  test-scoring_util.cpp  test-symbol.cpp
testing_tools/code_analysis/: use_clang_addr_san  use_clang_analyzer  use_clang_mem_san  use_clang_undefined_san  use_cppcheck  use_cpplint  use_valgrind
testing_tools/project_checks/: no_duplicate_include_guard  no_files_omitted_from_cmakelist  no_forgotten_throw  no_tabs  no_todo_etc  no_unnecessary_exception
